--- a/products.html
+++ b/products.html
@@ -416,7 +416,7 @@
             <!-- 目标套装 -->
             <div class="product">
                 <div class="product-header">
-                    <h2 class="product-title">🎯 目标管理套装</h2>
+                    <h2 class="product-title">🎯 目标规划套装</h2>
                     <span class="product-tag tag-normal">实用</span>
                 </div>
                 <p class="product-desc">3个目标管理工具,科学设定、追踪、达成目标,让你的人生更有规划!</p>
@@ -442,11 +442,86 @@
                 </div>
 
                 <div class="buttons">
-                    <a href="#payment" class="btn btn-primary">立即购买</a>
+                    <a href="#payment-goals" class="btn btn-primary">立即购买</a>
+                </div>
+            </div>
+
+            <!-- 思维模型套装 -->
+            <div class="product">
+                <div class="product-header">
+                    <h2 class="product-title">💭 思维模型套装</h2>
+                    <span class="product-tag tag-normal">深度</span>
+                </div>
+                <p class="product-desc">掌握核心思维模型,提升决策质量,用智慧驾驭复杂世界!</p>
+
+                <div class="features-grid">
+                    <div class="feature-item">
+                        <span class="feature-icon">🧠</span>
+                        <span class="feature-text">第一性原理</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🔄</span>
+                        <span class="feature-text">逆向思维模型</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🌐</span>
+                        <span class="feature-text">系统思考框架</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">⚖️</span>
+                        <span class="feature-text">概率思维指南</span>
+                    </div>
+                </div>
+
+                <div class="product-price">
+                    <span class="original">¥168</span>
+                    ¥89
+                </div>
+
+                <div class="buttons">
+                    <a href="#payment-thinking" class="btn btn-primary">立即购买</a>
+                </div>
+            </div>
+
+            <!-- 学习方法套装 -->
+            <div class="product">
+                <div class="product-header">
+                    <h2 class="product-title">📚 学习方法套装</h2>
+                    <span class="product-tag tag-normal">高效</span>
+                </div>
+                <p class="product-desc">掌握高效学习方法,加速知识吸收,成为终身学习的高手!</p>
+
+                <div class="features-grid">
+                    <div class="feature-item">
+                        <span class="feature-icon">🎓</span>
+                        <span class="feature-text">费曼学习法</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">📅</span>
+                        <span class="feature-text">间隔重复系统</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">📖</span>
+                        <span class="feature-text">深度阅读指南</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🎯</span>
+                        <span class="feature-text">知识管理系统</span>
+                    </div>
+                </div>
+
+                <div class="product-price">
+                    <span class="original">¥178</span>
+                    ¥99
+                </div>
+
+                <div class="buttons">
+                    <a href="#payment-learning" class="btn btn-primary">立即购买</a>
                 </div>
             </div>
         </div>
 
+        <!-- 完整套装支付 -->
         <div class="footer" id="payment">
             <h3>💳 支付方式</h3>
             <p>选择下方支付方式,完成后截图联系客服</p>
@@ -494,6 +569,78 @@
 
             <div style="margin-top: 20px;">
                 <a href="index.html">← 返回首页</a>
+            </div>
+        </div>
+
+        <!-- 目标规划支付 -->
+        <div class="footer" id="payment-goals" style="margin-top: 30px;">
+            <h3>💳 目标规划套装支付</h3>
+            <p>选择下方支付方式,完成后截图联系客服</p>
+
+            <div style="margin-top: 30px; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
+                <div style="text-align: center; padding: 30px; background: #f8f9fa; border-radius: 15px;">
+                    <h4 style="margin-bottom: 15px; color: #1677ff; font-size: 1.3rem;">支付宝支付</h4>
+                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                        <img src="./images/alipay-qr.png" alt="支付宝收款码" style="width: 200px; max-width: 100%;">
+                    </div>
+                    <p style="margin-top: 15px; font-weight: bold; color: #333; font-size: 1.2rem;">¥79</p>
+                </div>
+
+                <div style="text-align: center; padding: 30px; background: #f8f9fa; border-radius: 15px;">
+                    <h4 style="margin-bottom: 15px; color: #07c160; font-size: 1.3rem;">微信支付</h4>
+                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                        <img src="./images/wechat-qr.png" alt="微信收款码" style="width: 200px; max-width: 100%;">
+                    </div>
+                    <p style="margin-top: 15px; font-weight: bold; color: #333; font-size: 1.2rem;">¥79</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- 思维模型支付 -->
+        <div class="footer" id="payment-thinking" style="margin-top: 30px;">
+            <h3>💳 思维模型套装支付</h3>
+            <p>选择下方支付方式,完成后截图联系客服</p>
+
+            <div style="margin-top: 30px; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
+                <div style="text-align: center; padding: 30px; background: #f8f9fa; border-radius: 15px;">
+                    <h4 style="margin-bottom: 15px; color: #1677ff; font-size: 1.3rem;">支付宝支付</h4>
+                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                        <img src="./images/alipay-qr.png" alt="支付宝收款码" style="width: 200px; max-width: 100%;">
+                    </div>
+                    <p style="margin-top: 15px; font-weight: bold; color: #333; font-size: 1.2rem;">¥89</p>
+                </div>
+
+                <div style="text-align: center; padding: 30px; background: #f8f9fa; border-radius: 15px;">
+                    <h4 style="margin-bottom: 15px; color: #07c160; font-size: 1.3rem;">微信支付</h4>
+                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                        <img src="./images/wechat-qr.png" alt="微信收款码" style="width: 200px; max-width: 100%;">
+                    </div>
+                    <p style="margin-top: 15px; font-weight: bold; color: #333; font-size: 1.2rem;">¥89</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- 学习方法支付 -->
+        <div class="footer" id="payment-learning" style="margin-top: 30px;">
+            <h3>💳 学习方法套装支付</h3>
+            <p>选择下方支付方式,完成后截图联系客服</p>
+
+            <div style="margin-top: 30px; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
+                <div style="text-align: center; padding: 30px; background: #f8f9fa; border-radius: 15px;">
+                    <h4 style="margin-bottom: 15px; color: #1677ff; font-size: 1.3rem;">支付宝支付</h4>
+                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                        <img src="./images/alipay-qr.png" alt="支付宝收款码" style="width: 200px; max-width: 100%;">
+                    </div>
+                    <p style="margin-top: 15px; font-weight: bold; color: #333; font-size: 1.2rem;">¥99</p>
+                </div>
+
+                <div style="text-align: center; padding: 30px; background: #f8f9fa; border-radius: 15px;">
+                    <h4 style="margin-bottom: 15px; color: #07c160; font-size: 1.3rem;">微信支付</h4>
+                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                        <img src="./images/wechat-qr.png" alt="微信收款码" style="width: 200px; max-width: 100%;">
+                    </div>
+                    <p style="margin-top: 15px; font-weight: bold; color: #333; font-size: 1.2rem;">¥99</p>
+                </div>
             </div>
         </div>
     </div>
