--- a/index.html
+++ b/index.html
@@ -2571,32 +2571,19 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-section">
-                                <a href="products.html#writing" data-zh="✍️ 写作指南" data-en="✍️ Writing Guide">✍️ 写作指南</a>
-                                <ul class="dropdown-submenu">
-                                    <li><a href="products.html#writing" data-zh="写作模板大全（¥49）" data-en="Writing Templates (¥49)">写作模板大全（¥49）</a></li>
-                                    <li><a href="products.html#writing" data-zh="爆款标题库（¥39）" data-en="Viral Titles (¥39)">爆款标题库（¥39）</a></li>
-                                    <li><a href="products.html#writing" data-zh="Newsletter指南（¥59）" data-en="Newsletter Guide (¥59)">Newsletter指南（¥59）</a></li>
-                                    <li><a href="products.html#writing" data-zh="写作套装（¥99）" data-en="Writing Bundle (¥99)" style="font-weight: bold; color: var(--accent);">🔥 写作套装（¥99）</a></li>
-                                </ul>
+                                <a href="products.html#payment-writing" data-zh="✍️ 写作套装（¥99）" data-en="✍️ Writing Bundle (¥99)" style="font-weight: bold; color: var(--accent);">✍️ 写作套装（¥99）</a>
                             </li>
                             <li class="dropdown-section">
-                                <a href="products.html#goals" data-zh="🎯 目标规划" data-en="🎯 Goal Planning">🎯 目标规划</a>
-                                <ul class="dropdown-submenu">
-                                    <li><a href="products.html#goals" data-zh="Notion目标系统（¥79）" data-en="Notion Goals (¥79)">Notion目标系统（¥79）</a></li>
-                                    <li><a href="products.html#goals" data-zh="年度规划PDF（¥49）" data-en="Annual Planning PDF (¥49)">年度规划PDF（¥49）</a></li>
-                                    <li><a href="products.html#goals" data-zh="Excel追踪表（¥59）" data-en="Excel Tracker (¥59)">Excel追踪表（¥59）</a></li>
-                                    <li><a href="products.html#goals" data-zh="目标套装（¥79）" data-en="Goal Bundle (¥79)" style="font-weight: bold; color: var(--accent);">🔥 目标套装（¥79）</a></li>
-                                </ul>
+                                <a href="products.html#payment-goals" data-zh="🎯 目标套装（¥79）" data-en="🎯 Goal Bundle (¥79)" style="font-weight: bold; color: var(--accent);">🎯 目标套装（¥79）</a>
                             </li>
                             <li class="dropdown-section">
-                                <a href="products.html#thinking" data-zh="💭 思维模型" data-en="💭 Mental Models">💭 思维模型</a>
-                                <ul class="dropdown-submenu">
-                                    <li><a href="products.html#thinking" data-zh="第一性原理（¥39）" data-en="First Principles (¥39)">第一性原理（¥39）</a></li>
-                                    <li><a href="products.html#thinking" data-zh="逆向思维（¥39）" data-en="Reverse Thinking (¥39)">逆向思维（¥39）</a></li>
-                                    <li><a href="products.html#thinking" data-zh="系统思考（¥49）" data-en="Systems Thinking (¥49)">系统思考（¥49）</a></li>
-                                    <li><a href="products.html#thinking" data-zh="思维套装（¥89）" data-en="Thinking Bundle (¥89)" style="font-weight: bold; color: var(--accent);">🔥 思维套装（¥89）</a></li>
-                                </ul>
+                                <a href="products.html#payment-thinking" data-zh="💭 思维套装（¥89）" data-en="💭 Thinking Bundle (¥89)" style="font-weight: bold; color: var(--accent);">💭 思维套装（¥89）</a>
                             </li>
+                            <li class="dropdown-section">
+                                <a href="products.html#payment-learning" data-zh="📚 学习套装（¥99）" data-en="📚 Learning Bundle (¥99)" style="font-weight: bold; color: var(--accent);">📚 学习套装（¥99）</a>
+                            </li>
+                            <li><a href="products.html" data-zh="📦 查看全部产品" data-en="📦 View All Products">📦 查看全部产品</a></li>
+                        </ul>
                             <li class="dropdown-section">
                                 <a href="products.html#learning" data-zh="📚 学习方法" data-en="📚 Learning Methods">📚 学习方法</a>
                                 <ul class="dropdown-submenu">
@@ -2820,29 +2807,29 @@
                 <div class="resource-card" id="resource-writing">
                     <div class="resource-icon">✍️</div>
                     <h3 class="resource-title" data-zh="写作指南" data-en="Writing Guides">写作指南</h3>
-                    <p class="resource-description" data-zh="30+写作模板、100+爆款标题、Newsletter运营指南，快速提升写作能力" data-en="30+ writing templates, 100+ viral titles, Newsletter guide to boost writing quickly">30+写作模板、100+爆款标题、Newsletter运营指南，快速提升写作能力</p>
-                    <a href="products.html#writing" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
+                    <p class="resource-description" data-zh="3天写出第一篇文章，30天建立写作习惯，90天获得1000+阅读量" data-en="Write your first article in 3 days, build writing habits in 30 days, get 1000+ views in 90 days">3天写出第一篇文章，30天建立写作习惯，90天获得1000+阅读量</p>
+                    <a href="products.html" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
                 </div>
 
                 <div class="resource-card" id="resource-goals">
                     <div class="resource-icon">🎯</div>
                     <h3 class="resource-title" data-zh="目标规划" data-en="Goal Planning">目标规划</h3>
-                    <p class="resource-description" data-zh="Notion目标系统、年度规划PDF、Excel追踪表，让梦想变成现实" data-en="Notion goal system, annual planning PDF, Excel tracker to turn dreams into reality">Notion目标系统、年度规划PDF、Excel追踪表，让梦想变成现实</p>
-                    <a href="products.html#goals" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
+                    <p class="resource-description" data-zh="90天养成好习惯，达成3年没下的决心，实现人生第一个半程马拉松" data-en="Build good habits in 90 days, achieve 3-year goals, complete your first half-marathon">90天养成好习惯，达成3年没下的决心，实现人生第一个半程马拉松</p>
+                    <a href="products.html" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
                 </div>
 
                 <div class="resource-card" id="resource-thinking">
                     <div class="resource-icon">💭</div>
                     <h3 class="resource-title" data-zh="思维模型" data-en="Thinking Models">思维模型</h3>
-                    <p class="resource-description" data-zh="第一性原理、逆向思维、系统思考等核心思维模型，提升决策质量" data-en="First principles, reverse thinking, systems thinking and other core thinking models to improve decision quality">第一性原理、逆向思维、系统思考等核心思维模型，提升决策质量</p>
-                    <a href="products.html#thinking" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
+                    <p class="resource-description" data-zh="21天建立思维模型，提升决策质量，用智慧驾驭复杂世界" data-en="Build thinking models in 21 days, improve decision quality, navigate complex world with wisdom">21天建立思维模型，提升决策质量，用智慧驾驭复杂世界</p>
+                    <a href="products.html" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
                 </div>
 
                 <div class="resource-card" id="resource-learning">
                     <div class="resource-icon">📚</div>
                     <h3 class="resource-title" data-zh="学习方法" data-en="Learning Methods">学习方法</h3>
-                    <p class="resource-description" data-zh="费曼学习法、间隔重复、深度阅读等高效学习方法，加速知识吸收" data-en="Feynman technique, spaced repetition, deep reading and other efficient learning methods to accelerate knowledge absorption">费曼学习法、间隔重复、深度阅读等高效学习方法，加速知识吸收</p>
-                    <a href="products.html#learning" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
+                    <p class="resource-description" data-zh="28天掌握高效学习法，知识吸收速度提升3倍，成为终身学习的高手" data-en="Master efficient learning in 28 days, absorb knowledge 3x faster, become a lifelong learning master">28天掌握高效学习法，知识吸收速度提升3倍，成为终身学习的高手</p>
+                    <a href="products.html" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
                 </div>
             </div>
         </div>
