优化: 1) 重新设计导航栏为4个独立栏目(写作/目标/思维/学习) 2) 添加完整套装¥159支付区域和跳转按钮 3) 为各产品区域添加ID

--- a/products.html
+++ b/products.html
@@ -658,11 +658,17 @@
                 <br>
                 <small>原价 ¥265 · 立省 ¥106 (40%)</small>
             </div>
+
+            <div style="margin-top: 20px;">
+                <a href="#payment-complete" class="btn btn-primary" style="display: inline-block; padding: 15px 40px; font-size: 1.1rem;">
+                    🎉 购买完整套装 ¥159
+                </a>
+            </div>
         </div>
 
         <div class="products">
             <!-- 写作套装 -->
-            <div class="product">
+            <div class="product" id="writing">
                 <div class="product-header">
                     <h2 class="product-title">✍️ 写作能力套装</h2>
                     <span class="product-tag tag-recommended">热销</span>
@@ -854,7 +860,7 @@
             </div>
 
             <!-- 目标套装 -->
-            <div class="product">
+            <div class="product" id="goals">
                 <div class="product-header">
                     <h2 class="product-title">🎯 目标规划套装</h2>
                     <span class="product-tag tag-normal">实用</span>
@@ -1013,7 +1019,7 @@
             </div>
 
             <!-- 思维模型套装 -->
-            <div class="product">
+            <div class="product" id="thinking">
                 <div class="product-header">
                     <h2 class="product-title">💭 思维模型套装</h2>
                     <span class="product-tag tag-normal">深度</span>
@@ -1159,7 +1165,7 @@
             </div>
 
             <!-- 学习方法套装 -->
-            <div class="product">
+            <div class="product" id="learning">
                 <div class="product-header">
                     <h2 class="product-title">📚 学习方法套装</h2>
                     <span class="product-tag tag-normal">高效</span>
@@ -1477,6 +1483,55 @@
             <p style="margin-top: 25px; color: #999; font-size: 0.9rem;">
                 💡 购买后30分钟内发送资源 · 7天不满意退款保障 · 包含28天训练计划
             </p>
+        </div>
+
+        <!-- 完整套装支付 -->
+        <div class="footer" id="payment-complete" style="margin-top: 30px;">
+            <h3>💳 完整套装支付</h3>
+            <p style="font-size: 1.1rem; color: #667eea; font-weight: bold; margin-bottom: 20px;">
+                包含所有4个套装（写作+目标+思维+学习），立省 ¥106！
+            </p>
+
+            <div style="margin-top: 30px; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
+                <div style="text-align: center; padding: 30px; background: #f8f9fa; border-radius: 15px;">
+                    <h4 style="margin-bottom: 15px; color: #1677ff; font-size: 1.3rem;">支付宝支付</h4>
+                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                        <img src="./images/alipay-qr.png" alt="支付宝收款码" style="width: 200px; max-width: 100%;">
+                    </div>
+                    <p style="margin-top: 15px; font-weight: bold; color: #333; font-size: 1.5rem;">¥159</p>
+                    <p style="margin-top: 10px; color: #999; font-size: 0.9rem; text-decoration: line-through;">原价 ¥265</p>
+                    <p style="margin-top: 5px; color: #666; font-size: 0.9rem;">扫码支付后截图联系客服</p>
+                </div>
+
+                <div style="text-align: center; padding: 30px; background: #f8f9fa; border-radius: 15px;">
+                    <h4 style="margin-bottom: 15px; color: #07c160; font-size: 1.3rem;">微信支付</h4>
+                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                        <img src="./images/wechat-qr.png" alt="微信收款码" style="width: 200px; max-width: 100%;">
+                    </div>
+                    <p style="margin-top: 15px; font-weight: bold; color: #333; font-size: 1.5rem;">¥159</p>
+                    <p style="margin-top: 10px; color: #999; font-size: 0.9rem; text-decoration: line-through;">原价 ¥265</p>
+                    <p style="margin-top: 5px; color: #666; font-size: 0.9rem;">扫码支付后截图联系客服</p>
+                </div>
+            </div>
+
+            <div class="contact-info">
+                <div class="contact-item">
+                    <span>💬</span>
+                    <span>微信: OVERACHINGCC</span>
+                </div>
+                <div class="contact-item">
+                    <span>📧</span>
+                    <span>邮箱: littlelinthinks@gmail.com</span>
+                </div>
+            </div>
+
+            <p style="margin-top: 25px; color: #999; font-size: 0.9rem;">
+                💡 购买后30分钟内发送资源 · 7天不满意退款保障 · 包含所有4个套装
+            </p>
+
+            <div style="margin-top: 20px;">
+                <a href="index.html">← 返回首页</a>
+            </div>
         </div>
     </div>
 
